--- a/03-refactoring-to-hexagonal-architecture/BirthdayGreetingsKata.Tests/BirthdayGreetingsKata.Tests.csproj
+++ b/03-refactoring-to-hexagonal-architecture/BirthdayGreetingsKata.Tests/BirthdayGreetingsKata.Tests.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+        <PackageReference Include="NSubstitute" Version="5.3.0" />
         <PackageReference Include="NUnit" Version="4.1.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
     </ItemGroup>
